--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                 </div>
                 <div class="col-12 col-md-5 order-1 order-md-2 ">
                     <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col text-center">
+                        <div class="row justify-content-center p-lg-5">
+                            <div class="col text-center p-lg-5">
                                 <img src="./images/logo.jpg" class="img-fluid rounded-circle border border-secondary">
                             </div>
                         </div>
