--- a/sample.html
+++ b/sample.html
@@ -3,103 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Projects</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Animate.css for animation effects -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+  <title>Document</title>
+
+  <style>
+    #linux-animation {
+  background-color: #f0f0f0; /* Light background for contrast */
+  height: 300px; /* Adjust height as needed */
+  text-align: center;
+}
+
+.logo-container {
+  position: relative;
+  width: 100px; /* Adjust size as needed */
+  height: 100px;
+  margin: 0 auto;
+  animation: pulse 3s infinite; /* Smooth scaling effect */
+  padding-top: 100px;
+}
+.linux-logo:hover {
+  animation-play-state: paused;
+}
+
+.linux-logo {
+  width: 100%;
+  height: auto;
+  border-radius: 50%; /* Optional: Make it circular */
+  animation: rotate 5s infinite linear; /* Smooth rotation */
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
+
+  </style>
 </head>
 <body>
-
-<section id="project" class="container mt-5 pt-5">
-  <div class="text-center display-5 mt-3">PROJECTS</div>
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3" id="projectCardsContainer"></div>
-</section>
-
-<div class="modal fade" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="projectModalLabel">Project Details</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body" id="projectModalBody">
-        
-      </div>
-    </div>
+  
+<section id="linux-animation" class="d-flex justify-content-center align-items-center">
+  <div class="logo-container">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Tux.png" alt="Linux Logo" class="linux-logo">
   </div>
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-
-async function loadProjects() {
-  try {
-    const response = await fetch('./projects.json');
-    const projects = await response.json();
-
-    const projectCardsContainer = document.getElementById('projectCardsContainer');
-    projectCardsContainer.innerHTML = ''; 
-
-    projects.forEach((project, index) => {
-      const card = document.createElement('div');
-      card.classList.add('col-12', 'col-md-6', 'col-lg-4', 'col-xl-4', 'my-4');
-      card.innerHTML = `
-        <div class="card animate__animated animate__fadeInUp" onclick="showProjectModal(${index})">
-          <img src="${project.imageUrl}" class="card-img-top" alt="${project.title}">
-          <div class="card-body">
-            <h4 class="card-title">${project.title}</h4>
-            <h5 class="card-subtitle my-2">${project.subtitle}</h5>
-            <p class="card-text">${project.description}</p>
-            <a href="${project.link}" class="btn btn-primary btn-sm" target="_blank">${project.linkText}</a>
-          </div>
-        </div>
-      `;
-      projectCardsContainer.appendChild(card);
-    });
-
-    window.projects = projects;
-
-  } catch (error) {
-    console.error('Error loading projects:', error);
-  }
-}
-
-function showProjectModal(projectIndex) {
-  const project = window.projects[projectIndex];
-  const modalBody = document.getElementById('projectModalBody');
-
-  let modalContent = `
-    <p><strong>${project.title}</strong> - ${project.subtitle}</p>
-    <p>${project.description}</p>
-  `;
-
-  // Conditionally add fields based on availability
-  if (project.Frontend) {
-    modalContent += `<p><strong>Frontend:</strong> ${project.Frontend}</p>`;
-  }
-  if (project.Backend) {
-    modalContent += `<p><strong>Backend:</strong> ${project.Backend}</p>`;
-  }
-  if (project.Database) {
-    modalContent += `<p><strong>Database:</strong> ${project.Database}</p>`;
-  }
-
-
-  modalContent += `<a href="${project.link}" class="btn btn-primary btn-sm" target="_blank">${project.linkText}</a>`;
-
-
-  modalBody.innerHTML = modalContent;
-
-  const projectModal = new bootstrap.Modal(document.getElementById('projectModal'));
-  projectModal.show();
-}
-
-
-document.addEventListener('DOMContentLoaded', loadProjects);
-</script>
-
+</section>
 </body>
 </html>
+
